# pier

./: README.md  pyproject.toml
apps/viewer/app/lib/: api.ts  model-family.ts  types.ts  utils.ts
apps/viewer/app/routes/: compare.tsx  home.tsx  job.tsx  task.tsx
examples/tasks/cursor-web-tools-no-internet/: instruction.md  task.toml
examples/tasks/cursor-web-tools-no-internet/solution/: solve.sh
examples/tasks/cursor-web-tools-no-internet/tests/: test.sh
src/pier/: constants.py  job.py
src/pier/agents/: factory.py
src/pier/agents/installed/: claude_code.py  cursor_cli.py  local_mini_swe_agent.py  mini_swe_agent.py
src/pier/cli/: jobs.py  main.py
src/pier/environments/: agent_setup.py
src/pier/environments/docker/: docker.py
src/pier/models/agent/: name.py
src/pier/models/job/: config.py
src/pier/trial/: execution.py  hooks.py  queue.py  trial.py
src/pier/utils/: pass_at_k.py
src/pier/verifier/: verifier.py
src/pier/viewer/: models.py  server.py
tests/: test_claude_code.py  test_cursor_cli.py  test_job_resume.py  test_local_mini_swe_agent.py
