[project]
name = "pier"
version = "0.1.0"
description = "A framework for running coding agents in sandboxed environments and keeping full trajectories for analysis."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "anyio>=4.13.0",
    "harbor>=0.1.0",
    "jinja2>=3.1.0",
    "loguru>=0.7.3",
    "mcp>=1.27.0",
    "modal>=1.4.2",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.4",
    "shortuuid>=1.0.13",
    "tenacity>=9.1.4",
    "toml>=0.10.2",
    "typer>=0.12",
]

[project.scripts]
pier = "pier.cli.main:app"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"


[tool.ruff.lint.isort]
known-first-party = ["pier"]


[dependency-groups]
dev = ["ruff>=0.5"]
