[project]
name = "datacurve-pier"
version = "0.3.0"
description = "A framework for running coding agents in sandboxed environments and keeping full trajectories for analysis."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.12"
keywords = ["agents", "evaluation", "sandbox", "coding-agents", "harbor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.97.0",
    "anyio>=4.13.0",
    "botocore>=1.43.11",
    "claude-agent-sdk>=0.1.17",
    "daytona>=0.121.0",
    "fastapi>=0.128.0",
    "harbor>=0.5.0",
    "jinja2>=3.1.0",
    "litellm>=1.83.0",
    "loguru>=0.7.3",
    "mcp>=1.27.0",
    "modal>=1.4.2",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.4",
    "shortuuid>=1.0.13",
    "tenacity>=9.1.4",
    "toml>=0.10.2",
    "typer>=0.12",
    "uvicorn>=0.38.0",
]

[project.scripts]
pier = "pier.cli.main:app"

[tool.uv.build-backend]
module-name = "pier"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"


[tool.ruff.lint.isort]
known-first-party = ["pier"]


[dependency-groups]
dev = ["ruff>=0.5"]
